<resources>
    <string name="app_name">DonaPe</string>
    <string name="action_see_more">Más info</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El email es inválido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_failed_login">Usuario o contraseña incorrectos</string>
    <string name="error_internet">Error al acceder a la red</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"El permiso de contactos es necesario para el autocompletado de emails."
    </string>
    <string name="action_donate">Ayudar</string>
    <string name="title_necesidades">Se necesita:</string>
    <string name="donacion_item_para_label">para</string>
    <string name="donacion_item_fecha_label">Realizada el</string>
    <string name="donacion_item_estado_label">Estado:</string>
    <string name="donacion_item_ver_fotos_label">Ver fotos</string>
    <string name="action_see_mis_donaciones">Mis donaciones</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_refresh_after_load_error">Reintentar</string>
    <string name="error_load_data">Error al cargar los datos</string>
    <string name="msg_donacion_saved">Donación guardada</string>
    <string name="donacion_disclaimer">Ingresa la cantidad que quieres donar y serás contactado para la entrega</string>
    <string name="donacion_cantidad_title">Quiero donar:</string>
    <string name="ph_donacion_cantidad">1</string>
    <string name="ph_loading">cargando...</string>
    <string name="donacion_para_title">Donación para</string>
    <string name="mis_donaciones_title">Mis donaciones</string>
</resources>
