<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<TextView-->
            <!--android:id="@+id/tvCantidad"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="@dimen/tamanio_item_lista_titulo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="2"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tvArticulo"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="@dimen/tamanio_item_lista_titulo"-->
            <!--android:layout_marginLeft="@dimen/espacio_entre_palabras"-->
            <!--android:layout_marginStart="@dimen/espacio_entre_palabras"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="sillas"/>-->
        <!--<TextView-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="@dimen/tamanio_item_lista_titulo"-->
            <!--android:layout_marginLeft="@dimen/espacio_entre_palabras"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/donacion_item_para_label"/>-->
        <TextView
            android:id="@+id/tvTitulo"
            android:textStyle="bold"
            android:textSize="@dimen/tamanio_item_lista_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Familia Rojas"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donacion_item_fecha_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donacion_item_estado_label"/>
        <TextView
            android:id="@+id/tvEstado"
            android:layout_marginStart="@dimen/espacio_entre_palabras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_loading"/>
        <TextView
            android:layout_marginStart="@dimen/espacio_entre_palabras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>
        <TextView
            android:id="@+id/tvFecha"
            android:layout_marginStart="@dimen/espacio_entre_palabras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_loading"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnVerFotos"
            style="@style/AppTheme.Button"
            android:text="@string/donacion_item_ver_fotos_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>